package pb

// Key Words
const (
	ABORT                  = `ABORT`
	ACCEPT                 = `ACCEPT`
	ACCESS                 = `ACCESS`
	ADD                    = `ADD`
	ADDRESS                = `ADDRESS`
	ADVANCING              = `ADVANCING`
	AFTER                  = `AFTER`
	ALIGNED                = `ALIGNED`
	ALL                    = `ALL`
	ALPHABET               = `ALPHABET`
	ALPHABETIC             = `ALPHABETIC`
	ALPHABETIC_LOWER       = `ALPHABETIC-LOWER`
	ALPHABETIC_UPPER       = `ALPHABETIC-UPPER`
	ALPHANUMERIC           = `ALPHANUMERIC`
	ALPHANUMERIC_EDITED    = `ALPHANUMERIC-EDITED`
	ALSO                   = `ALSO`
	ALTER                  = `ALTER`
	ALTERNATE              = `ALTERNATE`
	AND                    = `AND`
	ANY                    = `ANY`
	ARE                    = `ARE`
	AREA                   = `AREA`
	AREAS                  = `AREAS`
	AS                     = `AS`
	ASCENDING              = `ASCENDING`
	ASCII                  = `ASCII`
	ASSIGN                 = `ASSIGN`
	ASSOCIATED_DATA        = `ASSOCIATED-DATA`
	ASSOCIATED_DATA_LENGTH = `ASSOCIATED-DATA-LENGTH`
	AT                     = `AT`
	ATTRIBUTE              = `ATTRIBUTE`
	AUTHOR                 = `AUTHOR`
	AUTO                   = `AUTO`
	AUTO_SKIP              = `AUTO-SKIP`
	BACKGROUND_COLOR       = `BACKGROUND-COLOR`
	BACKGROUND_COLOUR      = `BACKGROUND-COLOUR`
	BASIS                  = `BASIS`
	BEEP                   = `BEEP`
	BEFORE                 = `BEFORE`
	BEGINNING              = `BEGINNING`
	BELL                   = `BELL`
	BINARY                 = `BINARY`
	BIT                    = `BIT`
	BLANK                  = `BLANK`
	BLINK                  = `BLINK`
	BLOCK                  = `BLOCK`
	BOUNDS                 = `BOUNDS`
	BOTTOM                 = `BOTTOM`
	BY                     = `BY`
	BYFUNCTION             = `BYFUNCTION`
	BYTITLE                = `BYTITLE`
	CALL                   = `CALL`
	CANCEL                 = `CANCEL`
	CAPABLE                = `CAPABLE`
	CCSVERSION             = `CCSVERSION`
	CD                     = `CD`
	CF                     = `CF`
	CH                     = `CH`
	CHAINING               = `CHAINING`
	CHANGED                = `CHANGED`
	CHANNEL                = `CHANNEL`
	CHARACTER              = `CHARACTER`
	CHARACTERS             = `CHARACTERS`
	CLASS                  = `CLASS`
	CLASS_ID               = `CLASS-ID`
	CLOCK_UNITS            = `CLOCK-UNITS`
	CLOSE                  = `CLOSE`
	CLOSE_DISPOSITION      = `CLOSE-DISPOSITION`
	COBOL                  = `COBOL`
	CODE                   = `CODE`
	CODE_SET               = `CODE-SET`
	COLLATING              = `COLLATING`
	COL                    = `COL`
	COLUMN                 = `COLUMN`
	COM_REG                = `COM-REG`
	COMMA                  = `COMMA`
	COMMITMENT             = `COMMITMENT`
	COMMON                 = `COMMON`
	COMMUNICATION          = `COMMUNICATION`
	COMP                   = `COMP`
	COMP_1                 = `COMP-'1'`
	COMP_2                 = `COMP-'2'`
	COMP_3                 = `COMP-'3'`
	COMP_4                 = `COMP-'4'`
	COMP_5                 = `COMP-'5'`
	COMPUTATIONAL          = `COMPUTATIONAL`
	COMPUTATIONAL_1        = `COMPUTATIONAL-'1'`
	COMPUTATIONAL_2        = `COMPUTATIONAL-'2'`
	COMPUTATIONAL_3        = `COMPUTATIONAL-'3'`
	COMPUTATIONAL_4        = `COMPUTATIONAL-'4'`
	COMPUTATIONAL_5        = `COMPUTATIONAL-'5'`
	COMPUTE                = `COMPUTE`
	CONFIGURATION          = `CONFIGURATION`
	CONTAINS               = `CONTAINS`
	CONTENT                = `CONTENT`
	CONTINUE               = `CONTINUE`
	CONTROL                = `CONTROL`
	CONTROL_POINT          = `CONTROL-POINT`
	CONTROLS               = `CONTROLS`
	CONVENTION             = `CONVENTION`
	CONVERTING             = `CONVERTING`
	COPY                   = `COPY`
	CORR                   = `CORR`
	CORRESPONDING          = `CORRESPONDING`
	COUNT                  = `COUNT`
	CRUNCH                 = `CRUNCH`
	CURRENCY               = `CURRENCY`
	CURSOR                 = `CURSOR`
	DATA                   = `DATA`
	DATA_BASE              = `DATA-BASE`
	DATE                   = `DATE`
	DATE_COMPILED          = `DATE-COMPILED`
	DATE_WRITTEN           = `DATE-WRITTEN`
	DAY                    = `DAY`
	DAY_OF_WEEK            = `DAY-OF-WEEK`
	DBCS                   = `DBCS`
	DE                     = `DE`
	DEBUG_CONTENTS         = `DEBUG-CONTENTS`
	DEBUG_ITEM             = `DEBUG-ITEM`
	DEBUG_LINE             = `DEBUG-LINE`
	DEBUG_NAME             = `DEBUG-NAME`
	DEBUG_SUB_1            = `DEBUG-SUB-'1'`
	DEBUG_SUB_2            = `DEBUG-SUB-'2'`
	DEBUG_SUB_3            = `DEBUG-SUB-'3'`
	DEBUGGING              = `DEBUGGING`
	DECIMAL_POINT          = `DECIMAL-POINT`
	DECLARATIVES           = `DECLARATIVES`
	DEFAULT                = `DEFAULT`
	DEFAULT_DISPLAY        = `DEFAULT-DISPLAY`
	DEFINITION             = `DEFINITION`
	DELETE                 = `DELETE`
	DELIMITED              = `DELIMITED`
	DELIMITER              = `DELIMITER`
	DEPENDING              = `DEPENDING`
	DESCENDING             = `DESCENDING`
	DESTINATION            = `DESTINATION`
	DETAIL                 = `DETAIL`
	DFHRESP                = `DFHRESP`
	DFHVALUE               = `DFHVALUE`
	DISABLE                = `DISABLE`
	DISK                   = `DISK`
	DISPLAY                = `DISPLAY`
	DISPLAY_1              = `DISPLAY-'1'`
	DIVIDE                 = `DIVIDE`
	DIVISION               = `DIVISION`
	DONTCARE               = `DONTCARE`
	DOUBLE                 = `DOUBLE`
	DOWN                   = `DOWN`
	DUPLICATES             = `DUPLICATES`
	DYNAMIC                = `DYNAMIC`
	EBCDIC                 = `EBCDIC`
	EGCS                   = `EGCS` //EXTENSION
	EGI                    = `EGI`
	ELSE                   = `ELSE`
	EMI                    = `EMI`
	EMPTY_CHECK            = `EMPTY-CHECK`
	ENABLE                 = `ENABLE`
	END                    = `END`
	END_ACCEPT             = `END-ACCEPT`
	END_ADD                = `END-ADD`
	END_CALL               = `END-CALL`
	END_COMPUTE            = `END-COMPUTE`
	END_DELETE             = `END-DELETE`
	END_DIVIDE             = `END-DIVIDE`
	END_EVALUATE           = `END-EVALUATE`
	END_IF                 = `END-IF`
	END_MULTIPLY           = `END-MULTIPLY`
	END_OF_PAGE            = `END-OF-PAGE`
	END_PERFORM            = `END-PERFORM`
	END_READ               = `END-READ`
	END_RECEIVE            = `END-RECEIVE`
	END_RETURN             = `END-RETURN`
	END_REWRITE            = `END-REWRITE`
	END_SEARCH             = `END-SEARCH`
	END_START              = `END-START`
	END_STRING             = `END-STRING`
	END_SUBTRACT           = `END-SUBTRACT`
	END_UNSTRING           = `END-UNSTRING`
	END_WRITE              = `END-WRITE`
	ENDING                 = `ENDINF`
	ENTER                  = `ENTER`
	ENTRY                  = `ENTRY`
	ENTRY_PROCEDURE        = `ENTRY-PROCEDURE`
	ENVIRONMENT            = `ENVIRONMENT`
	EOP                    = `EOP`
	EQUAL                  = `EQUAL`
	ERASE                  = `ERASE`
	ERROR                  = `ERROR`
	EOL                    = `EOL`
	EOS                    = `EOS`
	ESCAPE                 = `ESCAPE`
	ESI                    = `ESI`
	EVALUATE               = `EVALUATE`
	EVENT                  = `EVENT`
	EVERY                  = `EVERY`
	EXCEPTION              = `EXCEPTION`
	EXCLUSIVE              = `EXCLUSIVE`
	EXHIBIT                = `EXHIBIT`
	EXIT                   = `EXIT`
	EXPORT                 = `EXPORT`
	EXTEND                 = `EXTEND`
	EXTENDED               = `EXTENDED`
	EXTERNAL               = `EXTERNAL`
	FALSE                  = `FALSE`
	FD                     = `FD`
	FILE                   = `FILE`
	FILE_CONTROL           = `FILE-CONTROL`
	FILLER                 = `FILLER`
	FINAL                  = `FINAL`
	FIRST                  = `FIRST`
	FOOTING                = `FOOTING`
	FOR                    = `FOR`
	FOREGROUND_COLOR       = `FOREGROUND-COLOR`
	FOREGROUND_COLOUR      = `FOREGROUND-COLOUR`
	FROM                   = `FROM`
	FULL                   = `FULL`
	FUNCTION               = `FUNCTION`
	FUNCTIONNAME           = `FUNCTIONNAME`
	FUNCTION_POINTER       = `FUNCTION-POINTER`
	GENERATE               = `GENERATE`
	GOBACK                 = `GOBACK`
	GIVING                 = `GIVING`
	GLOBAL                 = `GLOBAL`
	GO                     = `GO`
	GREATER                = `GREATER`
	GRID                   = `GRID`
	GROUP                  = `GROUP`
	HEADING                = `HEADING`
	HIGHLIGHT              = `HIGHLIGHT`
	HIGH_VALUE             = `HIGH-VALUE`
	HIGH_VALUES            = `HIGH-VALUES`
	I_O                    = `I-O`
	I_O_CONTROL            = `I-O-CONTROL`
	ID                     = `ID`
	IDENTIFICATION         = `IDENTIFICATION`
	IF                     = `IF`
	IMPLICIT               = `IMPLICIT`
	IMPORT                 = `IMPORT`
	IN                     = `IN`
	INDEX                  = `INDEX`
	INDEXED                = `INDEXED`
	INDICATE               = `INDICATE`
	INITIAL                = `INITIAL`
	INITIALIZE             = `INITIALIZE`
	INITIATE               = `INITIATE`
	INPUT                  = `INPUT`
	INPUT_OUTPUT           = `INPUT-OUTPUT`
	INSPECT                = `INSPECT`
	INSTALLATION           = `INSTALLATION`
	INTEGER                = `INTEGER`
	INTO                   = `INTO`
	INVALID                = `INVALID`
	INVOKE                 = `INVOKE`
	IS                     = `IS`
	JUST                   = `JUST`
	JUSTIFIED              = `JUSTIFIED`
	KANJI                  = `KANJI`
	KEPT                   = `KEPT`
	KEY                    = `KEY`
	KEYBOARD               = `KEYBOARD`
	LABEL                  = `LABEL`
	LANGUAGE               = `LANGUAGE`
	LAST                   = `LAST`
	LB                     = `LB`
	LD                     = `LD`
	LEADING                = `LEADING`
	LEFT                   = `LEFT`
	LEFTLINE               = `LEFTLINE`
	LENGTH                 = `LENGTH`
	LENGTH_CHECK           = `LENGTH-CHECK`
	LESS                   = `LESS`
	LIBACCESS              = `LIBACCESS`
	LIBPARAMETER           = `LIBPARAMETER`
	LIBRARY                = `LIBRARY`
	LIMIT                  = `LIMIT`
	LIMITS                 = `LIMITS`
	LINAGE                 = `LINAGE`
	LINAGE_COUNTER         = `LINAGE-COUNTER`
	LINE                   = `LINE`
	LINES                  = `LINES`
	LINE_COUNTER           = `LINE-COUNTER`
	LINKAGE                = `LINKAGE`
	LIST                   = `LIST`
	LOCAL                  = `LOCAL`
	LOCAL_STORAGE          = `LOCAL-STORAGE`
	LOCK                   = `LOCK`
	LONG_DATE              = `LONG-DATE`
	LONG_TIME              = `LONG-TIME`
	LOWER                  = `LOWER`
	LOWLIGHT               = `LOWLIGHT`
	LOW_VALUE              = `LOW-VALUE`
	LOW_VALUES             = `LOW-VALUES`
	MEMORY                 = `MEMORY`
	MERGE                  = `MERGE`
	MESSAGE                = `MESSAGE`
	MMDDYYYY               = `MMDDYYYY`
	MODE                   = `MODE`
	MODULES                = `MODULES`
	MORE_LABELS            = `MORE-LABELS`
	MOVE                   = `MOVE`
	MULTIPLE               = `MULTIPLE`
	MULTIPLY               = `MULTIPLY`
	NAMED                  = `NAMED`
	NATIONAL               = `NATIONAL`
	NATIONAL_EDITED        = `NATIONAL-EDITED`
	NATIVE                 = `NATIVE`
	NEGATIVE               = `NEGATIVE`
	NETWORK                = `NETWORK`
	NEXT                   = `NEXT`
	NO                     = `NO`
	NO_ECHO                = `NO-ECHO`
	NOT                    = `NOT`
	NULL_                  = `NULL`
	NULLS                  = `NULLS`
	NUMBER                 = `NUMBER`
	NUMERIC                = `NUMERIC`
	NUMERIC_DATE           = `NUMERIC-DATE`
	NUMERIC_EDITED         = `NUMERIC-EDITED`
	NUMERIC_TIME           = `NUMERIC-TIME`
	OBJECT_COMPUTER        = `OBJECT-COMPUTER`
	OCCURS                 = `OCCURS`
	ODT                    = `ODT`
	OF                     = `OF`
	OFF                    = `OFF`
	OMITTED                = `OMITTED`
	ON                     = `ON`
	OPEN                   = `OPEN`
	OPTIONAL               = `OPTIONAL`
	OR                     = `OR`
	ORDER                  = `ORDER`
	ORDERLY                = `ORDERLY`
	ORGANIZATION           = `ORGANIZATION`
	OTHER                  = `OTHER`
	OUTPUT                 = `OUTPUT`
	OVERFLOW               = `OVERFLOW`
	OVERLINE               = `OVERLINE`
	OWN                    = `OWN`
	PACKED_DECIMAL         = `PACKED-DECIMAL`
	PADDING                = `PADDING`
	PAGE                   = `PAGE`
	PAGE_COUNTER           = `PAGE-COUNTER`
	PASSWORD               = `PASSWORD`
	PERFORM                = `PERFORM`
	PF                     = `PF`
	PH                     = `PH`
	PIC                    = `PIC`
	PICTURE                = `PICTURE`
	PLUS                   = `PLUS`
	POINTER                = `POINTER`
	POSITION               = `POSITION`
	POSITIVE               = `POSITIVE`
	PORT                   = `PORT`
	PRINTER                = `PRINTER`
	PRINTING               = `PRINTING`
	PRIVATE                = `PRIVATE`
	PROCEDURE              = `PROCEDURE`
	PROCEDURE_POINTER      = `PROCEDURE-POINTER`
	PROCEDURES             = `PROCEDURES`
	PROCEED                = `PROCEED`
	PROCESS                = `PROCESS`
	PROGRAM                = `PROGRAM`
	PROGRAM_ID             = `PROGRAM-ID`
	PROGRAM_LIBRARY        = `PROGRAM-LIBRARY`
	PROMPT                 = `PROMPT`
	PURGE                  = `PURGE`
	QUEUE                  = `QUEUE`
	QUOTE                  = `QUOTE`
	QUOTES                 = `QUOTES`
	RANDOM                 = `RANDOM`
	READER                 = `READER`
	REMOTE                 = `REMOTE`
	RD                     = `RD`
	REAL                   = `REAL`
	READ                   = `READ`
	RECEIVE                = `RECEIVE`
	RECEIVED               = `RECEIVED`
	RECORD                 = `RECORD`
	RECORDING              = `RECORDING`
	RECORDS                = `RECORDS`
	RECURSIVE              = `RECURSIVE`
	REDEFINES              = `REDEFINES`
	REEL                   = `REEL`
	REF                    = `REF`
	REFERENCE              = `REFERENCE`
	REFERENCES             = `REFERENCES`
	RELATIVE               = `RELATIVE`
	RELEASE                = `RELEASE`
	REMAINDER              = `REMAINDER`
	REMARKS                = `REMARKS`
	REMOVAL                = `REMOVAL`
	REMOVE                 = `REMOVE`
	RENAMES                = `RENAMES`
	REPLACE                = `REPLACE`
	REPLACING              = `REPLACING`
	REPORT                 = `REPORT`
	REPORTING              = `REPORTING`
	REPORTS                = `REPORTS`
	REQUIRED               = `REQUIRED`
	RERUN                  = `RERUN`
	RESERVE                = `RESERVE`
	REVERSE_VIDEO          = `RESERVE-VIDEO`
	RESET                  = `RESET`
	RETURN                 = `RETURN`
	RETURN_CODE            = `RETURN-CODE`
	RETURNING              = `RETURNING`
	REVERSED               = `REVERSED`
	REWIND                 = `REWIND`
	REWRITE                = `REWRITE`
	RF                     = `RF`
	RH                     = `RH`
	RIGHT                  = `RIGHT`
	ROUNDED                = `ROUNDED`
	RUN                    = `RUN`
	SAME                   = `SAME`
	SAVE                   = `SAVE`
	SCREEN                 = `SCREEN`
	SD                     = `SD`
	SEARCH                 = `SEARCH`
	SECTION                = `SECTION`
	SECURE                 = `SECURE`
	SECURITY               = `SECURITY`
	SEGMENT                = `SEGMENT`
	SEGMENT_LIMIT          = `SEGMENT-LIMIT`
	SELECT                 = `SELECT`
	SEND                   = `SEND`
	SENTENCE               = `SENTENCE`
	SEPARATE               = `SEPARATE`
	SEQUENCE               = `SEQUENCE`
	SEQUENTIAL             = `SEQUENTIAL`
	SET                    = `SET`
	SHARED                 = `SHARED`
	SHAREDBYALL            = `SHAREDBYALL`
	SHAREDBYRUNUNIT        = `SHAREDBYRUNUNIT`
	SHARING                = `SHARING`
	SHIFT_IN               = `SHIFT-IN`
	SHIFT_OUT              = `SHIFT-OUT`
	SHORT_DATE             = `SHORT-DATE`
	SIGN                   = `SIGN`
	SIZE                   = `SIZE`
	SORT                   = `SORT`
	SORT_CONTROL           = `SORT-CONTROL`
	SORT_CORE_SIZE         = `SORT-CORE-SIZE`
	SORT_FILE_SIZE         = `SORT-FILE-SIZE`
	SORT_MERGE             = `SORT-MERGE`
	SORT_MESSAGE           = `SORT-MESSAGE`
	SORT_MODE_SIZE         = `SORT-MODE-SIZE`
	SORT_RETURN            = `SORT-RETURN`
	SOURCE                 = `SOURCE`
	SOURCE_COMPUTER        = `SOURCE-COMPUTER`
	SPACE                  = `SPACE`
	SPACES                 = `SPACES`
	SPECIAL_NAMES          = `SPECIAL-NAMES`
	STANDARD               = `STANDARD`
	STANDARD_1             = `STANDARD-'1'`
	STANDARD_2             = `STANDARD-'2'`
	START                  = `START`
	STATUS                 = `STATUS`
	STOP                   = `STOP`
	STRING                 = `STRING`
	SUB_QUEUE_1            = `SUB-QUEUE-'1'`
	SUB_QUEUE_2            = `SUB-QUEUE-'2'`
	SUB_QUEUE_3            = `SUB-QUEUE-'3'`
	SUBTRACT               = `SUBTRACT`
	SUM                    = `SUM`
	SUPPRESS               = `SUPPRESS`
	SYMBOL                 = `SYMBOL`
	SYMBOLIC               = `SYMBOLIC`
	SYNC                   = `SYNC`
	SYNCHRONIZED           = `SYNCHRONIZED`
	TABLE                  = `TABLE`
	TALLY                  = `TALLY`
	TALLYING               = `TALLYING`
	TASK                   = `TASK`
	TAPE                   = `TAPE`
	TERMINAL               = `TERMINAL`
	TERMINATE              = `TERMINATE`
	TEST                   = `TEST`
	TEXT                   = `TEXT`
	THAN                   = `THAN`
	THEN                   = `THEN`
	THREAD                 = `THREAD`
	THREAD_LOCAL           = `THREAD-LOCAL`
	THROUGH                = `THROUGH`
	THRU                   = `THRU`
	TIME                   = `TIME`
	TIMER                  = `TIMER`
	TIMES                  = `TIMES`
	TITLE                  = `TITLE`
	TO                     = `TO`
	TODAYS_DATE            = `TODAYS-DATE`
	TODAYS_NAME            = `TODAYS-NAME`
	TOP                    = `TOP`
	TRAILING               = `TRAILING`
	TRUE                   = `TRUE`
	TRUNCATED              = `TRUNCATED`
	TYPE                   = `TYPE`
	TYPEDEF                = `TYPEDEF`
	UNDERLINE              = `UNDERLINE`
	UNIT                   = `UNIT`
	UNSTRING               = `UNSTRING`
	UNTIL                  = `UNTIL`
	UP                     = `UP`
	UPON                   = `UPON`
	USAGE                  = `USAGE`
	USE                    = `USE`
	USING                  = `USING`
	VALUE                  = `VALUE`
	VALUES                 = `VALUES`
	VARYING                = `VARYING`
	VIRTUAL                = `VIRTUAL`
	WAIT                   = `WAIT`
	WHEN                   = `WHEN`
	WHEN_COMPILED          = `WHEN-COMPILED`
	WITH                   = `WITH`
	WORDS                  = `WORDS`
	WORKING_STORAGE        = `WORKING-STORAGE`
	WRITE                  = `WRITE`
	YEAR                   = `YEAR`
	YYYYMMDD               = `YYYYMMDD`
	YYYYDDD                = `YYYYDDD`
	ZERO                   = `ZERO`
	ZERO_FILL              = `ZERO-FILL`
	ZEROS                  = `ZEROS`
	ZEROES                 = `ZEROES`
)

const (
	COMMENT_LINE      = "*"
	COMMENT_LINE_NEW  = "/"
	CONTINUATION_LINE = "-"
	DEBUGGING_MODE    = "D"
)
